--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
   "author": "Shivam Gupta",
   "license": "ISC",
   "dependencies": {
-	"express": "3.x",
-        "socket.io": "0.9.x"
-  }
+    "express": "~3.15.2",
+    "socket.io": "0.9.x",
+    "body-parser": "~1.5.2",
+    "ejs": "~1.0.0",
+    "mongoose": "~3.8.14",
+    "jade": "~1.5.0",
+    "mysql": "~2.4.1"
+  },
   "bugs": {
     "url": "https://github.com/shivam-dev/randomchat-nodejs/issues"
   },
